--- a/unit4assessment/src/css/Footer.css
+++ b/unit4assessment/src/css/Footer.css
@@ -35,23 +35,16 @@
     background-color: #075C3D;
 }
 
-/* .FooterA:hover {
-    background-color: #075C3D;
-    opacity: 1;
-    border-radius: 5%;
-    height: 100%;
-} */
-
 .FooterImg {
-    transform: scale(.11);
+    transform: scale(.1);
     filter: brightness(0) grayscale(1) contrast(0.1);
     position: relative;
     padding: 0;
-    margin-top: -224px;
+    margin-top: -225px;
     float: right;
     z-index: 0;
 }
 
-/* .FooterA:hover .FooterImg{
-    filter: brightness(0) grayscale(1) contrast(1.0);
-} */
+.FooterImg:hover {
+    filter: brightness(1) contrast(0) saturate(1) drop-shadow(20px 20px 10px black);
+}
