--- a/unit4assessment/src/css/PokemonDisplay.css
+++ b/unit4assessment/src/css/PokemonDisplay.css
@@ -9,7 +9,7 @@
     width: 50%;
     position: fixed;
     z-index: -1;
-    top: 0;
+    top: 63px;
     overflow-x: hidden;
     padding-top: 20px;
 }
@@ -17,7 +17,6 @@
 .left {
     left: 0;
     background-color: #ABB8B2;
-    /* opacity: .35; */
 }
 
 .right {
@@ -28,15 +27,48 @@
 
 .centered {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0px;
+    left: 35%;
     text-align: center;
     list-style-type: none;
 }
 
-p {
-    opacity: 1;
-    color: black;
-    filter: alpha(opacity=100);
+.leftP {
+    text-align: start;
+    font-size: 25px;
+    position: absolute;
+    left: -81%;
+    top: 290%;
+}
+
+.leftImg {
+    position: absolute;
+    width: 130%;
+    height: auto;
+    left: -15%;
+    top: 190%;
+}
+
+.typeLi {
+    display: flex;
+    left: 25px;
+    position: relative;
+}
+
+.spriteForm {
+    bottom: 30%;
+    left: 23%;
+    position: fixed;
+}
+
+.spriteBtn {
+    font-size: 17px;
+    border-radius: 5px;
+    width: 100px;
+}
+
+.spriteBtn:hover {
+    background-color: #043322;
+    color: white;
+    opacity: .5;
 }
